{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 19,
  "lineage": "ce643814-b354-86bf-2019-9be4ce62e182",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Muneeb_Bastian_Host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:281668362239:instance/i-051913665aa66bc2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-051913665aa66bc2d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MuneebKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-00c5affca6882a1cd",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-3-210-197-245.compute-1.amazonaws.com",
            "public_ip": "3.210.197.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d5777b402ea4c73f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074e267edf50fde66",
            "tags": {
              "Name": "Muneeb Bastian Host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-055526f73c6f384ea"
            ]
          },
          "depends_on": [
            "aws_security_group.Muneeb_VPC_Security_Group",
            "aws_subnet.Muneeb_VPC_Public_Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Muneeb_Private_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:281668362239:instance/i-01c46d0a8660af120",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01c46d0a8660af120",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0606730e0ef35aa2e",
            "private_dns": "ip-10-0-3-30.ec2.internal",
            "private_ip": "10.0.3.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c147c8e23c8ea9ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d27a58881d8b3bd",
            "tags": {
              "Name": "Muneeb Private Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa3f1cd7e889f2bd"
            ]
          },
          "depends_on": [
            "aws_subnet.Muneeb_VPC_Private_Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Muneeb_VPC_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0617d0b9eb69acff4",
            "owner_id": "281668362239",
            "tags": {
              "Name": "Muneeb VPC Internet Gateway"
            },
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Muneeb_VPC_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0617d0b9eb69acff4",
            "id": "r-rtb-0eb17505bf1ab43601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb17505bf1ab4360",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.Muneeb_VPC_GW",
            "aws_route_table.Muneeb_VPC_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Muneeb_VPC_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb17505bf1ab4360",
            "owner_id": "281668362239",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0617d0b9eb69acff4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Muneeb VPC Route Table"
            },
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Muneeb_VPC_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed4ab81696a1afb9",
            "route_table_id": "rtb-0eb17505bf1ab4360",
            "subnet_id": "subnet-074e267edf50fde66"
          },
          "depends_on": [
            "aws_route_table.Muneeb_VPC_route_table",
            "aws_subnet.Muneeb_VPC_Public_Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Muneeb_VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281668362239:security-group/sg-055526f73c6f384ea",
            "description": "Muneeb VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055526f73c6f384ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Muneeb VPC Security Group",
            "name_prefix": null,
            "owner_id": "281668362239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Muneeb VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Muneeb_VPC_Private_Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281668362239:subnet/subnet-04d27a58881d8b3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04d27a58881d8b3bd",
            "map_public_ip_on_launch": false,
            "owner_id": "281668362239",
            "tags": {
              "Name": "Muneeb VPC Private Subnet 1"
            },
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Muneeb_VPC_Private_Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281668362239:subnet/subnet-0b081ce03d90b7f12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b081ce03d90b7f12",
            "map_public_ip_on_launch": false,
            "owner_id": "281668362239",
            "tags": {
              "Name": "Muneeb VPC Private Subnet 2"
            },
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Muneeb_VPC_Public_Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281668362239:subnet/subnet-074e267edf50fde66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-074e267edf50fde66",
            "map_public_ip_on_launch": true,
            "owner_id": "281668362239",
            "tags": {
              "Name": "Muneeb VPC Public Subnet 1"
            },
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Muneeb_VPC_Public_Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281668362239:subnet/subnet-083585f933fd9a21b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-083585f933fd9a21b",
            "map_public_ip_on_launch": true,
            "owner_id": "281668362239",
            "tags": {
              "Name": "Muneeb VPC Public Subnet 2"
            },
            "vpc_id": "vpc-0e457d93e0c901972"
          },
          "depends_on": [
            "aws_vpc.Muneeb_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Muneeb_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281668362239:vpc/vpc-0e457d93e0c901972",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031f916878b70023e",
            "default_route_table_id": "rtb-08c043c95be13f3ef",
            "default_security_group_id": "sg-0fa3f1cd7e889f2bd",
            "dhcp_options_id": "dopt-b1fe15d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e457d93e0c901972",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c043c95be13f3ef",
            "owner_id": "281668362239",
            "tags": {
              "Name": "Muneeb VPC"
            }
          }
        }
      ]
    }
  ]
}